--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,25 @@
+@font-face {
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Book.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Bold.otf") format("opentype");
+  font-weight: bold;
+  font-style: bold;
+}
+
 * {
   box-sizing: border-box;
+  font-family: "Circular";
+}
+
+.container {
+  width: 100%;
+  height: 100%;
 }
 
 .home {
@@ -38,5 +58,52 @@
   color: #ff8800;
   text-decoration: none;
   width: 50%;
+}
+
+.page-wrap {
+  width: 80%;
+  margin: auto;
+}
+
+.page-wrap-narrow {
+  width: 80%;
+  margin: auto;
+}
+
+.page-wrap-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 5vh;
+}
+
+.page-header h2 {
+  width: 30%;
+  color: #ff8800;
+  text-align: center;
+}
+
+.page-header h3 {
+  text-align: center;
+}
+
+.page-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5vh;
+}
+
+.page-list {
+  width: 40%;
+}
+
+.page-list-elem {
+  width: 15%;
 }
 /*# sourceMappingURL=style.css.map */
