--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,25 @@
+@font-face {
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Book.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Circular";
+  src: url("../fonts/CircularStd-Bold.otf") format("opentype");
+  font-weight: bold;
+  font-style: bold;
+}
+
 * {
   box-sizing: border-box;
+  font-family: "Circular";
+}
+
+.container {
+  width: 100%;
+  height: 100%;
 }
 
 .home {
@@ -32,5 +52,45 @@
     color: rgb(255, 136, 0);
     text-decoration: none;
     width: 50%;
+  }
+}
+.page {
+  &-wrap {
+    width: 80%;
+    margin: auto;
+    &-narrow {
+      width: 80%;
+      margin: auto;
+    }
+    &-list {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+  &-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 5vh;
+    h2 {
+      width: 30%;
+      color: rgb(255, 136, 0);
+      text-align: center;
+    }
+    h3 {
+      text-align: center;
+    }
+  }
+  &-div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 5vh;
+  }
+  &-list {
+    width: 40%;
+    &-elem {
+      width: 15%;
+    }
   }
 }
