add new block to unternehmen page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -93,4 +93,14 @@
       width: 15%;
     }
   }
+  &-clients {
+    &-list {
+      display: flex;
+      justify-content: space-around;
+      img {
+        width: 15%;
+        object-fit: contain;
+      }
+    }
+  }
 }
