--- a/css/style.css
+++ b/css/style.css
@@ -106,4 +106,14 @@
 .page-list-elem {
   width: 15%;
 }
+
+.page-clients-list {
+  display: flex;
+  justify-content: space-around;
+}
+
+.page-clients-list img {
+  width: 15%;
+  object-fit: contain;
+}
 /*# sourceMappingURL=style.css.map */
